<resources>
    <string name="app_name">Dr. Vinyl Scheduler</string>
    <string name="login_button">Login</string>
    <string name="create_account_button">New Account</string>
    <string name="logo_of_company">Logo of Company</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_confirm">Re-enter Password</string>
    <string name="submit">Submit</string>
    <string name="clear_logo">Clear Logo</string>
    <string name="forget_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="service">Services</string>
    <string name="leather">Leather and Plastic</string>
    <string name="fabric">Fabric Repair</string>
    <string name="hard_plastic">Hard Plastic Repair</string>
    <string name="leather_repair">Leather Repair</string>
    <string name="paint">Paint (Exterior)</string>
    <string name="interior">Interior Repair</string>
    <string name="odor">Interior Odor Removal</string>
    <string name="_29_99">$29.99</string>
    <string name="_49_99">$49.99</string>
    <string name="_6999">$69.99</string>
    <string name="vehicle">Vehicle</string>
    <string name="_69_99">69.99</string>
    <string name="_79_99">$79.99</string>
    <string name="_99_99">$99.99</string>
    <string name="cont">Continue</string>
    <string name="time1">1:00 PM</string>
    <string name="time3">3:00 PM</string>
    <string name="time2">5:30 PM</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="_1_00_pm">1:00 PM</string>
    <string name="_12_16_2017">12/16/2017</string>
    <string name="job_s">Job(s)</string>
    <string name="ci">Car Interior</string>
    <string name="dat">Date and Time</string>
    <string name="estimated_cost">Estimated Cost</string>
    <string name="_103_12">$103.12</string>
    <string name="confirm">Confirm</string>
    <string name="please_select_what_you_would_like_to_change">Please select what you would like to change:</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="answer">Answer</string>
    <string-array name="state_list">
        <item>State</item>
        <item>AK</item>
        <item>AL</item>
        <item>AR</item>
        <item>AZ</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>IA</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>MA</item>
        <item>MD</item>
        <item>ME</item>
        <item>MI</item>
        <item>MO</item>
        <item>MN</item>
        <item>MS</item>
        <item>MT</item>
        <item>NC</item>
        <item>ND</item>
        <item>NE</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NV</item>
        <item>NY</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WI</item>
        <item>WV</item>
        <item>WY</item>
    </string-array>
    <string-array name="days_of_month">
        <item>Day</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="months">
        <item>Month</item>
        <item>JAN</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>APR</item>
        <item>MAY</item>
        <item>JUN</item>
        <item>JUL</item>
        <item>AUG</item>
        <item>SEP</item>
        <item>OCT</item>
        <item>NOV</item>
        <item>DEC</item>
    </string-array>
    <string-array name="security_questions">
        <item>What was the name of your first pet?</item>
        <item>What elementary school did you attend?</item>
        <item>What was your first job?</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="security_question">Security Question</string>
    <string name="edit_account">Edit Account</string>
    <string name="edit_appointment">Edit Appointment</string>
    <string name="logout">Logout</string>
    <string name="please_enter_your_address_and_phone_number">Please Enter Your Address and Phone Number</string>
    <string name="take_a_picture">Take A Picture</string>
    <string name="take_picture">Take Picture</string>
    <string name="save_pic">Save Picture</string>
    <string name="user_picture">User Picture</string>
    <string name="newPasss">New Password</string>
</resources>
