<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.carruth.finalproject.ServiceActivity">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="495dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/scrollView2">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="140dp"
                android:layout_height="70dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/logo_of_company"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/dr_vinyl"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/leather"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo" />

            <CheckBox
                android:id="@+id/service1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/leather_repair"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:buttonTint="@color/dr_vinyl_yellow"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />
            <CheckBox
                android:id="@+id/service2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/hard_plastic"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:buttonTint="@color/dr_vinyl_yellow"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/service1"/>

            <CheckBox
                android:id="@+id/service3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/fabric"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:buttonTint="@color/dr_vinyl_yellow"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/service2"/>


            <TextView
                android:id="@+id/service1_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/_29_99"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:layout_marginEnd="32dp"
                app:layout_constraintRight_toRightOf="parent" />


            <TextView
                android:id="@+id/service2_cost"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:text="@string/_49_99"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/service1_cost"
                android:layout_marginEnd="32dp"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/service3_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="159dp"
                android:layout_marginTop="23dp"
                android:text="@string/_6999"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/service2_cost"
                android:layout_margin="32dp"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/vehicle"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/service3" />

            <CheckBox
                android:id="@+id/service4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/paint"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:buttonTint="@color/dr_vinyl_yellow"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />
            <CheckBox
                android:id="@+id/service5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/odor"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:buttonTint="@color/dr_vinyl_yellow"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/service4"/>

            <CheckBox
                android:id="@+id/service6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/interior"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:buttonTint="@color/dr_vinyl_yellow"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/service5"/>

            <TextView
                android:id="@+id/service4_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/_6999"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                android:layout_marginEnd="32dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="32dp" />


            <TextView
                android:id="@+id/service5_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/_79_99"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/service4_cost"
                android:layout_marginEnd="32dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="32dp" />


            <TextView
                android:id="@+id/service6_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/_99_99"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/service5_cost"
                android:layout_marginEnd="32dp"
                app:layout_constraintRight_toRightOf="parent" />

            <Button
                android:id="@+id/submit_services"
                android:layout_width="352dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/button_layout"
                android:onClick="onContinue"
                android:text="@string/cont"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/service6" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
