<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.carruth.finalproject.EditAccountActivity">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="495dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/scrollView2">
        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            tools:context="com.example.carruth.finalproject.CreateAccountActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo_of_company"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/dr_vinyl" />

    <EditText
        android:id="@+id/edit_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/edit_text_layout"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimary"
        android:textCursorDrawable="@null"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/edit_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_layout"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimary"
        android:textCursorDrawable="@null"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_first_name">

    </EditText>

            <EditText
                android:id="@+id/edit_address"
                android:layout_width="332dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_layout"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="?attr/colorPrimary"
                android:textCursorDrawable="@null"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_last_name">

            </EditText>

    <EditText
        android:id="@+id/edit_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_layout"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimary"
        android:textCursorDrawable="@null"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_address">

    </EditText>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="100dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/spinner_layout"
        android:entries="@array/state_list"
        android:textAlignment="center"
        app:layout_constraintLeft_toRightOf="@+id/edit_city"
        app:layout_constraintTop_toBottomOf="@+id/edit_address">

    </Spinner>

    <EditText
        android:id="@+id/edit_zip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_layout"
        android:ems="10"
        android:hint="@string/zip"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimary"
        android:textCursorDrawable="@null"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_city">

    </EditText>

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_layout"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimary"
        android:textCursorDrawable="@null"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_zip">

    </EditText>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_layout"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimary"
        android:textCursorDrawable="@null"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_phone">

    </EditText>

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_layout"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimary"
        android:textCursorDrawable="@null"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email">

    </EditText>

    <EditText
        android:id="@+id/edit_password_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_layout"
        android:ems="10"
        android:hint="@string/password_confirm"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimary"
        android:textCursorDrawable="@null"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password">

    </EditText>

            <Button
                android:id="@+id/submit_new_account"
                android:layout_width="332dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_layout"
                android:onClick="onEditAccount"
                android:text="@string/submit"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_password_confirm" />

</android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
